--- a/index.html
+++ b/index.html
@@ -16,39 +16,41 @@
     <header>
       <div class="container">
         <h1>Timothy Dixon</h1>
-        <h2>Welcome to my official website!</h2>
+        <h2>Hey there! Welcome to my site!</h2>
       </div>
     </header>
 
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+	<div class="container">
+    <section class="main-content">
+	
+		<p>
+			I am driven by the desire to learn everything there is to know about Information 
+			Systems. My interests within information systems are: SAP ERP/ABAP, 
+			Data Mining/Machine Learning, Database Development, and Mobile Technologies. 
+			I am currently a senior at East Tennessee State University completing my 
+			Bachelor's in Computing, with a concentration in Information Systems and an 
+			emphasis in Accounting. Please take a look around, and if you have any 
+			questions/comments don't hesitate to contact me!
+		</p>
+		
+		<h3>My Recent/Current Projects</h3>
+			<h4>TNGenWeb Cemetery Database</h4>
+			<h4>SAP ABAP Reporting</h4>
+			<h4>Heritage Alliance Mobile App</h4>
+			
+		<h3>Contact Me</h3>
+			<p>
+				If you have any questions or would just like to say hi, simply click one of 
+				the links below, or fill out the contact form!
+			</p>
+	
+	
+	
+	
+	
+	
+	</section>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
     </div>
-
-    
   </body>
 </html>
