--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<div class="container">
     <section class="main-content">
-	
+		<h3>About Me</h3>
 		<p>
 			I am driven by the desire to learn everything there is to know about Information 
 			Systems. My interests within information systems are: SAP ERP/ABAP, 
