--- a/index.html
+++ b/index.html
@@ -1,56 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+#Timothy Dixon
+I am driven by the desire to learn everything there is to know about Information Systems. My interests within information systems are: SAP ERP/ABAP, Data Mining/Machine Learning, Database Development, and Mobile Technologies. I am currently a senior at East Tennessee State University completing my Bachelor's in Computing, with a concentration in Information Systems and an emphasis in Accounting. Please take a look around, and if you have any questions/comments don't hesitate to contact me!
+***
+##*Recent/Current Projects*
+TNGenWeb Cemetery Database
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+SAP ABAP Reporting
 
-    <title>Timothy Dixon</title>
-  </head>
-
-  <body>
-
-    <header>
-      <div class="container">
-        <h1>Timothy Dixon</h1>
-        <h2>Hey there! Welcome to my site!</h2>
-      </div>
-    </header>
-
-	<div class="container">
-    <section class="main-content">
-		<h3>About Me</h3>
-		<p>
-			I am driven by the desire to learn everything there is to know about Information 
-			Systems. My interests within information systems are: SAP ERP/ABAP, 
-			Data Mining/Machine Learning, Database Development, and Mobile Technologies. 
-			I am currently a senior at East Tennessee State University completing my 
-			Bachelor's in Computing, with a concentration in Information Systems and an 
-			emphasis in Accounting. Please take a look around, and if you have any 
-			questions/comments don't hesitate to contact me!
-		</p>
-		
-		<h3>My Recent/Current Projects</h3>
-			<h4>TNGenWeb Cemetery Database</h4>
-			<h4>SAP ABAP Reporting</h4>
-			<h4>Heritage Alliance Mobile App</h4>
-			
-		<h3>Contact Me</h3>
-			<p>
-				If you have any questions or would just like to say hi, simply click one of 
-				the links below, or fill out the contact form!
-			</p>
-	
-	
-	
-	
-	
-	
-	</section>
-
-    </div>
-  </body>
-</html>
+Heritage Alliance Mobile App
+***
+##*Contact Me*
+If you have any questions or just want to say hi, simply follow one of these links, or fill out the contact form!
